--- a/res/fxml/app.fxml
+++ b/res/fxml/app.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -47,7 +49,28 @@
             <AnchorPane prefHeight="288.0" prefWidth="274.0" styleClass="content-pane">
                <children>
                   <Label fx:id="populationHeader" layoutX="74.0" layoutY="14.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" styleClass="content-title" text="Population" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <ListView fx:id="populationListView" layoutX="74.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" styleClass="edge-to-edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+                  <ListView fx:id="populationListView" layoutX="74.0" layoutY="88.0" styleClass="edge-to-edge" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+                  <Button fx:id="populationAddButton" mnemonicParsing="false" onAction="#populationAddAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                     <tooltip>
+                        <Tooltip text="Create empty" />
+                     </tooltip></Button>
+                  <Button fx:id="populationSubButton" mnemonicParsing="false" onAction="#populationSubAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0">
+                     <tooltip>
+                        <Tooltip text="Remove selected" />
+                     </tooltip></Button>
+                  <Button fx:id="populationLoadButton" mnemonicParsing="false" onAction="#populationLoadAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="25.0">
+                     <tooltip>
+                        <Tooltip text="Load genome" />
+                     </tooltip></Button>
+                  <Button fx:id="populationSaveButton" mnemonicParsing="false" onAction="#populationSaveAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <tooltip>
+                        <Tooltip text="Save genome" />
+                     </tooltip></Button>
+                  <Button fx:id="crossoverButton" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#crossoverAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="85.0">
+                     <tooltip>
+                        <Tooltip text="Crossover selected" />
+                     </tooltip>
+                  </Button>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" GridPane.columnIndex="1" GridPane.columnSpan="2">
