--- a/res/fxml/app.fxml
+++ b/res/fxml/app.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.kjosu.neatdebug.components.ConnectionInspector?>
+<?import de.kjosu.neatdebug.components.GenomeVisualizer?>
+<?import de.kjosu.neatdebug.components.NodeInspector?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="window" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.kjosu.neatdebug.SceneController">
    <children>
@@ -41,18 +41,18 @@
       <GridPane hgap="10.0" styleClass="background-pane" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" prefWidth="200.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" prefWidth="280.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" prefWidth="280.0" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="300.0" prefHeight="300.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
           <RowConstraints maxHeight="245.0" prefHeight="245.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <AnchorPane prefHeight="288.0" prefWidth="274.0" styleClass="content-pane">
                <children>
                   <Label fx:id="populationHeader" layoutX="74.0" layoutY="14.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" styleClass="content-title" text="Population" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <ListView fx:id="populationListView" layoutX="74.0" layoutY="88.0" styleClass="edge-to-edge" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
+                  <ListView fx:id="populationListView" layoutX="74.0" layoutY="88.0" onMousePressed="#onPopulationListPressed" styleClass="edge-to-edge" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
                   <Button fx:id="populationAddButton" mnemonicParsing="false" onAction="#populationAddAction" prefHeight="25.0" prefWidth="25.0" styleClass="font-awesome" text="_" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                      <tooltip>
                         <Tooltip text="Create empty" />
@@ -79,6 +79,7 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" GridPane.columnIndex="1" GridPane.columnSpan="2">
                <children>
                   <Label fx:id="visualizerHeader" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" styleClass="content-title" text="Visualizer" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <GenomeVisualizer fx:id="genomeVisualizer" layoutX="209.0" layoutY="105.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" GridPane.rowIndex="1">
@@ -94,105 +95,9 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <Label fx:id="nodeInspectorHeader" layoutX="26.0" layoutY="6.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" styleClass="content-title" text="Node-Inspector" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+                  <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" vvalue="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
                      <content>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Identifier" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField editable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets />
-                                 </VBox.margin>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Node type" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField editable="false" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Squash" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <ComboBox prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Bias" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Activation" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="State" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label text="Old" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <TextField AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label styleClass="content-title" text="Incoming connections" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <ListView minHeight="25.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane>
-                                 <children>
-                                    <Label styleClass="content-title" text="Outgoing connections" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <ListView minHeight="25.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                              <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <Label styleClass="content-title" text="Self connection" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <Button mnemonicParsing="false" styleClass="dark-border" text="Inspect" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="25.0" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                              </AnchorPane>
-                           </children>
-                        </VBox>
+                        <NodeInspector fx:id="nodeInspector" />
                      </content>
                   </ScrollPane>
                </children>
@@ -200,6 +105,11 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
                   <Label fx:id="connectionInspectorHeader" layoutX="118.0" layoutY="81.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" styleClass="content-title" text="Connection-Inspector" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+                     <content>
+                        <ConnectionInspector fx:id="connectionInspector" />
+                     </content>
+                  </ScrollPane>
                </children>
             </AnchorPane>
          </children>
